--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </div>
         </div>
 
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+        <script type="text/javascript" src="assets/lib/TweenMax/TweenMax.min.js"></script>
         <script type="text/javascript" src="assets/lib/noframework/noframework.waypoints.min.js"></script>
         <script type="text/javascript" src="assets/lib/jquery/jquery-3.5.1.min.js"></script>
         <script type="text/javascript" src="assets/lib/jquery/jquery-ui.min.js"></script>
