Added loading icon

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <div class="wave-marker"></div>
                 <div class="tide-marker"></div>
             </div>
+            <img class="loading-icon" src="assets/svg/loading-rings.svg">
             <div class="data-container">
                 <div class="owl-carousel owl-theme">
                     <div class="tide-info">
