--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         
         <link rel="manifest" href="./manifest.json">
 
+        <meta charset="UTF-8">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="description" content="Web App for predicting tide times at your current location.">
         <meta name="theme-color" content="#5f9ecf">
