--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Tides</title>
+
+        <meta charset="UTF-8">
 
         <link rel="stylesheet" type="text/css" href="assets/css/main.css"/>
         <link rel="stylesheet" type="text/css" href="assets/lib/OwlCarousel/owl.carousel.min.css"/>
@@ -23,8 +25,6 @@
         <link rel="icon" type="image/png" sizes="96x96" href="assets/images/icons/icon-96x96.png">
         
         <link rel="manifest" href="./manifest.json">
-
-        <meta charset="UTF-8">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="description" content="Web App for predicting tide times at your current location.">
         <meta name="theme-color" content="#5f9ecf">
